/* hostdiscovery.proto: describes the hostdiscovery object
 *
 * Author: Ghazanfar Ali <ghazanfar.ali@ttu.edu>,Kevin Pelzel <kevinpelzel22@gmail.com>; J. Lowell Wofford <lowell@lanl.gov>
 *
 * This software is open source software available under the BSD-3 license.
 * Copyright (c) 2018, Triad National Security, LLC
 * See LICENSE file for details.
 */

syntax = "proto3";
package HostThermalDiscovery;
option go_package = ".;hostthermaldiscovery";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

message Config {
    string polling_interval = 1;
    string temp_sensor_path = 2;
    string freq_sensor_url = 3;
    bool log_thermal_data = 4;
    string log_here = 5;
    int32 lower_normal = 6;
    int32 upper_normal = 7;

    int32 lower_high = 8;
    int32 upper_high = 9;

    int32 lower_critical = 10;
    int32 upper_critical = 11;
}

